[package]
name = "posting_list_codecs"
version = "0.1.0"
edition = "2021"

[dependencies]
bitpacking = { version = "0.9.2", default-features = false, features = ["bitpacker4x"] }
ownedbytes = "0.7.0"
rice_coder = { version = "0.1.0", path = "../rice_coder" }
roaring = "0.10.6"
tantivy-common = "0.7.0"

[dev-dependencies]
binggan = "0.10.0"
pretty_assertions = "1.4.1"
proptest = "1.5.0"
rand = "0.8.5"
zipf = "7.0.1"

[[bench]]
name = "bench"
harness = false

